js/js.translator/testData/incremental/invalidationWithPL/moveFunctionBetweenModules/lib2/l2.1.kt
package sample

fun foo(): Int = 1
